# Rust-PyShot-test-task

./: README.md  TASK.md
hash_finder/: Cargo.toml  README.md
hash_finder/src/: main.rs
task-1/: Cargo.toml
task-1/src/: main.rs
