[package]
name = "hash_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
hex = "0.4.3"
num_cpus = "1.16.0"
sha2 = "0.10.7"
